--- a/react/components/BulletGroup/styles.css
+++ b/react/components/BulletGroup/styles.css
@@ -1,18 +1,40 @@
-.bullet__item {
-    
-    max-width: 1280px;
-    margin: 0 auto;
+.bullet__container{
+    display: flex;
+    overflow: auto;
 }
 
-bullet__item--title {
-    background-color: magenta;
+.bullet__item {
+    
+    min-width: 80px;
+    margin: 0 auto;
+}
+.bullet__container::-webkit-scrollbar{
+    height: 4px;
+}
+
+.bullet__container::-webkit-scrollbar-track{
+    background-clip: padding-box;
+    background-color: blue;
+    border-right: 16px solid transparent;
+
+}
+
+.bullet__container::-webkit-scrollbar-thumb{
+    background-clip: padding-box;
+    background-color: red;
+    border-right: 16px solid transparent;
+    
+}
+
+.bullet__item--title {
+    text-decoration: none;
 }
 
 bullet__item--image {
     width: 80px;
 }
 
-bullet__item--link {
+.bullet__item--link {
     text-decoration: none;
 }
 
@@ -21,5 +43,6 @@ bullet__item--link {
     .bullet__item,
     .bullet__item-image {
         width: 100px;
+        min-width: 100px;
     }
 }
